# DataStructures

./: CMakeLists.txt
Class07122024/: PurfectBalancedTree.cpp
Classwork/: PurfectBalancedTree.cpp
Homework/: Domashno10AZad2.cpp  Domashno10AZad3.cpp  Domashno10AZaf1.cpp  Domashno10Bzad1.cpp  Domashno10Bzad2.cpp  Domashno11Zad1.cpp  Domashno9b1zad.cpp  Domashno9bzad3.cpp  LinearStack.cpp  RecursiveStack.cpp  StackProgram.cpp
