cmake_minimum_required(VERSION 3.28)
project(DataStructures)

set(CMAKE_CXX_STANDARD 17)


add_executable(SteckProgram Homework/StackProgram.cpp)
add_executable(PurfectBalancedTree Classwork/PurfectBalancedTree.cpp)
add_executable(RecursiveStack Homework/RecursiveStack.cpp)
add_executable(LinearStack Homework/LinearStack.cpp)

