cmake_minimum_required(VERSION 3.28)
project(DataStructures)

set(CMAKE_CXX_STANDARD 17)


add_executable(SteckProgram Homework/StackProgram.cpp)
add_executable(PurfectBalancedTree Classwork/PurfectBalancedTree.cpp)
add_executable(RecursiveStack Homework/RecursiveStack.cpp)
add_executable(LinearStack Homework/LinearStack.cpp)
add_executable(Domashno9b1zad Homework/Domashno9b1zad.cpp)
add_executable(Domashno10Bzad1 Homework/Domashno10Bzad1.cpp)
add_executable(Domashno10AZad1 Homework/Domashno10AZaf1.cpp)
add_executable(Domashno11Zad1 Homework/Domashno11Zad1.cpp)
add_executable(Domashno10AZad3 Homework/Domashno10AZad3.cpp)
add_executable(Domashno10AZad2 Homework/Domashno10AZad2.cpp)
add_executable(Domashno10Bzad2  Homework/Domashno10Bzad2.cpp)
add_executable(Domashno9bzad3 Homework/Domashno9bzad3.cpp)

